--- a/unit-test-dependencies-tutorial/UI/Base.lproj/Main.storyboard
+++ b/unit-test-dependencies-tutorial/UI/Base.lproj/Main.storyboard
@@ -18,29 +18,35 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Postal code" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="tB1-KY-3A3">
-                                <rect key="frame" x="16" y="91" width="343" height="30"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" alignment="top" translatesAutoresizingMaskIntoConstraints="NO" id="aH5-EV-doW">
+                                <rect key="frame" x="16" y="83" width="343" height="45"/>
+                                <subviews>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Postal code" textAlignment="center" clearsOnBeginEditing="YES" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="tB1-KY-3A3">
+                                        <rect key="frame" x="0.0" y="0.0" width="171.5" height="30"/>
+                                        <nil key="textColor"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <textInputTraits key="textInputTraits" keyboardType="numberPad" returnKeyType="go"/>
+                                        <connections>
+                                            <outlet property="delegate" destination="BYZ-38-t0r" id="bqU-Jo-7cU"/>
+                                        </connections>
+                                    </textField>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="A2O-da-rOl">
+                                        <rect key="frame" x="171.5" y="0.0" width="171.5" height="30"/>
+                                        <state key="normal" title="Update Location"/>
+                                    </button>
+                                </subviews>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="30" id="syp-RO-It3"/>
+                                    <constraint firstAttribute="height" constant="45" id="EbP-9R-E37"/>
                                 </constraints>
-                                <nil key="textColor"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
-                            </textField>
+                            </stackView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qgn-zL-ibS">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="75"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="pSR-pk-Qkt">
                                         <rect key="frame" x="8" y="46" width="359" height="25"/>
                                         <subviews>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Current Location:" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3vv-IB-Y64">
-                                                <rect key="frame" x="0.0" y="0.0" width="179.5" height="25"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                <nil key="textColor"/>
-                                                <nil key="highlightedColor"/>
-                                            </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="City, 33903" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iUm-f1-vi1">
-                                                <rect key="frame" x="179.5" y="0.0" width="179.5" height="25"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="359" height="25"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
@@ -59,24 +65,44 @@
                                     <constraint firstAttribute="height" constant="75" id="iM1-W1-HDn"/>
                                 </constraints>
                             </view>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="A2O-da-rOl">
-                                <rect key="frame" x="119" y="129" width="137" height="30"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="30" id="rJS-Gd-Khu"/>
-                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="137" id="s5M-02-tdI"/>
-                                </constraints>
-                                <state key="normal" title="Locate Me"/>
-                            </button>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="G6U-eG-mCi">
+                                <rect key="frame" x="0.0" y="136" width="375" height="531"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cell" textLabel="MS8-ds-ZQc" style="IBUITableViewCellStyleDefault" id="0wr-8W-bAY">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="0wr-8W-bAY" id="28t-eu-Hmf">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="MS8-ds-ZQc">
+                                                    <rect key="frame" x="15" y="0.0" width="345" height="43.5"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="VGs-c4-JAa"/>
+                                </connections>
+                            </tableView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="A2O-da-rOl" firstAttribute="top" secondItem="tB1-KY-3A3" secondAttribute="bottom" constant="8" id="7p5-2p-ZRc"/>
+                            <constraint firstItem="aH5-EV-doW" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="928-a5-wqd"/>
+                            <constraint firstItem="aH5-EV-doW" firstAttribute="top" secondItem="qgn-zL-ibS" secondAttribute="bottom" constant="8" id="9BW-CW-nn8"/>
                             <constraint firstItem="qgn-zL-ibS" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="GEq-v1-Leg"/>
-                            <constraint firstItem="tB1-KY-3A3" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="Qoq-cX-BBA"/>
-                            <constraint firstItem="tB1-KY-3A3" firstAttribute="top" secondItem="qgn-zL-ibS" secondAttribute="bottom" constant="16" id="Xry-KF-LBR"/>
-                            <constraint firstItem="A2O-da-rOl" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="jsv-VU-9Ly"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="aH5-EV-doW" secondAttribute="trailing" constant="16" id="I1n-fg-b1c"/>
+                            <constraint firstItem="G6U-eG-mCi" firstAttribute="top" secondItem="aH5-EV-doW" secondAttribute="bottom" constant="8" id="Pxx-Og-rLh"/>
+                            <constraint firstItem="G6U-eG-mCi" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="RXM-7C-vTa"/>
+                            <constraint firstItem="G6U-eG-mCi" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="WAl-xE-Xbv"/>
+                            <constraint firstItem="G6U-eG-mCi" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="btO-2y-KoX"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="qgn-zL-ibS" secondAttribute="trailing" id="l1z-Z8-2xI"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="tB1-KY-3A3" secondAttribute="trailing" constant="16" id="lR4-Vw-Ipq"/>
                             <constraint firstItem="qgn-zL-ibS" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="rly-rH-JpU"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
@@ -84,14 +110,14 @@
                     <navigationItem key="navigationItem" id="UZ5-ti-ewK"/>
                     <connections>
                         <outlet property="addressLabel" destination="iUm-f1-vi1" id="j0K-7I-Ari"/>
-                        <outlet property="currentLocationLabel" destination="3vv-IB-Y64" id="ghk-sR-BvN"/>
                         <outlet property="searchButton" destination="A2O-da-rOl" id="bhX-od-Km9"/>
                         <outlet property="searchText" destination="tB1-KY-3A3" id="1D0-vP-OSM"/>
+                        <outlet property="tableView" destination="G6U-eG-mCi" id="wII-dE-5gM"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1076" y="133.5832083958021"/>
+            <point key="canvasLocation" x="504.80000000000001" y="132.68365817091455"/>
         </scene>
     </scenes>
 </document>
