--- a/unit-test-dependencies-tutorial/UI/Base.lproj/Main.storyboard
+++ b/unit-test-dependencies-tutorial/UI/Base.lproj/Main.storyboard
@@ -19,7 +19,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" alignment="top" translatesAutoresizingMaskIntoConstraints="NO" id="aH5-EV-doW">
-                                <rect key="frame" x="16" y="83" width="343" height="45"/>
+                                <rect key="frame" x="16" y="83" width="343" height="30"/>
                                 <subviews>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Postal code" textAlignment="center" clearsOnBeginEditing="YES" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="tB1-KY-3A3">
                                         <rect key="frame" x="0.0" y="0.0" width="171.5" height="30"/>
@@ -36,7 +36,11 @@
                                     </button>
                                 </subviews>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="45" id="EbP-9R-E37"/>
+                                    <constraint firstItem="A2O-da-rOl" firstAttribute="top" secondItem="aH5-EV-doW" secondAttribute="top" id="8Jh-jK-xAc"/>
+                                    <constraint firstAttribute="height" constant="30" id="EbP-9R-E37"/>
+                                    <constraint firstItem="tB1-KY-3A3" firstAttribute="top" secondItem="aH5-EV-doW" secondAttribute="top" id="Q2P-Wd-5Fm"/>
+                                    <constraint firstAttribute="bottom" secondItem="tB1-KY-3A3" secondAttribute="bottom" id="WH8-9a-jZi"/>
+                                    <constraint firstAttribute="bottom" secondItem="A2O-da-rOl" secondAttribute="bottom" id="Wn5-g2-Jh0"/>
                                 </constraints>
                             </stackView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qgn-zL-ibS">
@@ -66,7 +70,7 @@
                                 </constraints>
                             </view>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="G6U-eG-mCi">
-                                <rect key="frame" x="0.0" y="136" width="375" height="531"/>
+                                <rect key="frame" x="0.0" y="121" width="375" height="546"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cell" textLabel="MS8-ds-ZQc" style="IBUITableViewCellStyleDefault" id="0wr-8W-bAY">
@@ -111,8 +115,10 @@
                     <connections>
                         <outlet property="addressLabel" destination="iUm-f1-vi1" id="j0K-7I-Ari"/>
                         <outlet property="searchButton" destination="A2O-da-rOl" id="bhX-od-Km9"/>
+                        <outlet property="searchStackView" destination="aH5-EV-doW" id="PZG-ix-RBD"/>
                         <outlet property="searchText" destination="tB1-KY-3A3" id="1D0-vP-OSM"/>
                         <outlet property="tableView" destination="G6U-eG-mCi" id="wII-dE-5gM"/>
+                        <outlet property="topView" destination="qgn-zL-ibS" id="oeY-oE-1Zq"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
